# agentnestOSS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentnest/: __init__.py  _egress_proxy.py  _repl_server.py  approvals.py  artifacts.py  async_sandbox.py  capabilities.py  cli.py  egress.py  events.py  exceptions.py  execution.py  filesystem.py  git.py  mcp_server.py  models.py  policy.py  pool.py  presets.py  profiles.py  reaper.py  registry.py  sandbox.py  secrets.py  server.py  session.py  templates.py
agentnest/integrations/: __init__.py  base.py  langchain.py  smolagents.py
agentnest/runtime/: __init__.py  base.py  docker.py  firecracker.py  kubernetes.py  remote.py
benchmarks/: bench.py
docs/: api.md  architecture.md  backends.md  benchmarks.md  branding.md  cli.md  configuration.md  deployment.md  development.md  index.md  installation.md  quickstart.md  security.md
docs/assets/stylesheets/: extra.css
docs/guides/: addons.md  agents.md  async-streaming.md  integrations.md  policies.md  pools-artifacts.md  remote.md  state.md
examples/: advanced_security.py  async_streaming.py  basic.py  install_packages.py  kubernetes.py  langchain_tool.py  smolagents_executor.py  upload_download.py
tests/: __init__.py  fakes.py  test_addons.py  test_docker_integration.py  test_docker_runtime.py  test_egress.py  test_egress_integration.py  test_execution.py  test_extended.py  test_filesystem.py  test_fork.py  test_fork_integration.py  test_integrations.py  test_models.py  test_reaper.py  test_sandbox.py  test_session_integration.py
tests/escapes/: test_container_escapes.py  test_filesystem_escapes.py
