[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "agentnest"
version = "0.1.0"
description = "A secure, self-hosted runtime for isolated AI agent execution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentNest contributors" }]
keywords = ["agents", "sandbox", "docker", "ai", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["docker>=7.1,<8"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.6",
  "types-docker>=7.1",
]

[project.urls]
Homepage = "https://github.com/agentnest/agentnest"
Documentation = "https://github.com/agentnest/agentnest/tree/main/docs"
Issues = "https://github.com/agentnest/agentnest/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentnest"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["integration: tests requiring a local Docker daemon"]

[tool.coverage.run]
branch = true
source = ["agentnest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["agentnest"]

