[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "agentnest"
version = "0.3.0"
description = "A secure, self-hosted runtime for isolated AI agent execution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentNest contributors" }]
keywords = ["agents", "sandbox", "docker", "ai", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["docker>=7.1,<8"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "PyYAML>=6.0",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.6",
  "types-docker>=7.1",
  "types-PyYAML>=6.0",
]
docs = [
  "mkdocs-material>=9.6",
  "mkdocstrings[python]>=0.27",
]
kubernetes = ["kubernetes>=31,<34"]
mcp = ["mcp>=1.2"]
observability = ["opentelemetry-api>=1.28"]
profiles = ["PyYAML>=6.0"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.32"]
all = [
  "fastapi>=0.115",
  "kubernetes>=31,<34",
  "mcp>=1.2",
  "opentelemetry-api>=1.28",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.32",
]

[project.scripts]
agentnest = "agentnest.cli:main"

[project.urls]
Homepage = "https://github.com/mihirahuja1/agentnestOSS"
Documentation = "https://mihirahuja1.github.io/agentnestOSS/"
Issues = "https://github.com/mihirahuja1/agentnestOSS/issues"
Changelog = "https://github.com/mihirahuja1/agentnestOSS/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentnest"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["integration: tests requiring a local Docker daemon"]

[tool.coverage.run]
branch = true
source = ["agentnest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["agentnest"]

[[tool.mypy.overrides]]
module = ["agentnest.mcp_server", "agentnest.server"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["langchain_core.*"]
ignore_missing_imports = true
